--- a/src/main.scss
+++ b/src/main.scss
@@ -3,7 +3,7 @@
 body
 {
     font-family: 'Inter';
-    background-color: #f992a7;
+    background-color: #ffffff;
 }
 
 .page
@@ -26,25 +26,32 @@ body
         {
             font-size: 40px;
             letter-spacing: 2px;
-            color: #ffffff;
+            color: #141414;
             font-weight: bold;
-            text-shadow: 0px 0px 15px rgb(255, 240, 240);
+            text-shadow: 0px 4px 15px rgba(29, 29, 29, 0.182);
+        }
+
+        &-underline
+        {
+            height: 4px;
+            width: 200px;
+            background-color: rgb(237, 189, 0);
         }
     }
 
     &-box2 
     {
         flex-grow: 3;
-        background-color: rgb(255, 209, 213);
+        background-color: rgb(197, 197, 197);
         display: flex;
         width: 600px;
         flex-direction: column;
         align-items: center;
         border-radius: 20px;
-        margin: 30px 0px;
+        margin: 90px 0px;
         position: relative;
-        background: rgba( 255, 255, 255, 0.15 );
-        box-shadow: 0 8px 32px 0 rgba(102, 0, 0, 0.163);
+        background: rgba(215, 215, 215, 0.15);
+        box-shadow: 0 8px 32px 0 rgba(74, 74, 74, 0.163);
         backdrop-filter: blur( 1px );
         border-radius: 10px;
         border: 1px solid rgba( 255, 255, 255, 0.18 );
@@ -74,12 +81,71 @@ body
                 position: absolute;
                 height: 100%;
                 width: 100%;
-                background-color: #ffffff;
+                background-color: #efcb03;
                 top: -5px;
                 border-radius: 50%;
                 left: 10px;
+                z-index: 1;
             }
 
+            &-quote 
+            {
+                position: absolute;
+                height: 40px;
+                width: 40px;
+                top: 0;
+                background-color: rgb(255, 204, 0);
+                z-index: 10;
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+        }
+
+        &-name 
+        {
+            position: relative;
+            top: -30px;
+            font-size: 22px;
+            font-weight: bold;
+            color: #efcb03;
+            letter-spacing: 2px;
+        }
+
+        &-title
+        {
+            position: relative;
+            top: -30px;
+            font-size: 14px;
+            color: rgb(41, 41, 41);
+            font-weight: bold;
+        }
+
+        &-bio
+        {
+            color: rgb(90, 90, 90);
+            width: 550px;
+            text-align: center;
+            font-weight: 500;
+            font-size: 15px;
+        }
+
+        &-arrow
+        {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            &-right
+            {
+                // margin: 15px;
+            }
+        }
+
+        &-surprise 
+        {
         }
     }
 }
