--- a/src/main.scss
+++ b/src/main.scss
@@ -160,17 +160,10 @@ body
 
         &-surprise 
         {
-            border: 1px solid black;
             padding: 5px 10px;
-            border-radius: 5px;
-            transition: all ease-in 0.3s;
-
-            &:hover
-            {
-                background-color: black;
-                color: white;
-                transition: all ease-out 0.3s;
-            }
+            color: #e2c000;
+            font-size: 12px;
+            font-weight: bold;
         }
     }
 }
