--- a/src/main.scss
+++ b/src/main.scss
@@ -67,7 +67,7 @@ body
             background-color: white;
             position: relative;
 
-            &-photo
+            img
             {
                 position: relative;
                 height: 100%;
